# trajectory_predictor

./: .gitignore  Dockerfile  LICENCE.txt  README.md  contour_experiemnt.ipynb  feedforward.py  process_raw_img.ipynb  requirements.txt  rnn_medium_dataset.pgf  setup.cfg  test.ipynb  top_t.pgf
docker/: Dockerfile  build_docker.sh  start_docker.sh
docs/: predictor_feedforward.md
scripts/: .gitignore  generate_centerline_spline.py  generate_dataset.py  generate_maps.sh  plot_prediction_feedforward.py  scripttest.py  test.py  train_darts_model.py  train_darts_rnn.py  train_evaluate_model.py  trajectory_generator_wall_follower.py
scripts/depracated/: trajectory_generator_wall_follower.py
scripts/metrics/: Baseline_metrics.py  Improvedbaseline_metrics.py  metrics_printer.py  metricsgenerator.py
scripts/plot/: Baseline_plot_pred_on_track.py  Baseline_track_known.py  Improved_baseline_model_trackknown_plot.py  Improvedbaseline_plot_prediction.py  feedforward_plot_prediction_on_track.py  plot_baseline_scenario1.py  plot_baseline_scenario2.py  plot_baseline_scenario3.py  plot_baseline_scenario3samespeed.py  plot_baseline_scenario4.py  (+10 more)
test/: TODO.md  test_centerline_from_occupancy.py  test_centerline_from_real_map.py  test_track_printer.py
track_generator/: random_trackgen.py  track_printer.py
train_trajectory_generator/: CurvatureFinder.py  SplineOptimizer.py  TrajectoryPrinter.py  create_train_dataset.py  trajectory_generator_wall_follower.py
trajectory_generator/: trajectory_generator_wall_follower.py
trajectory_predictor/: Dockerfile  feedforward.py
(+44 files in other folders)
