[metadata]
name = trajectory_predictor
version = 0.1
license = MIT
description = Trajectory predition for race cars
long_description = file: README.md
author = Aloysio Galvão Lopes

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   gym

[options.packages.find]
where=src