[metadata]
name = trajectory_predictor
version = 0.1
license = MIT
description = Trajectory predition for race cars
long_description = file: README.md
author = Aloysio Galvão Lopes

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   gym
   scipy
   shapely
   matplotlib
   opencv-python
   pytorch-lightning==1.6.5

[options.packages.find]
where=src
